# FollowMeTank

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: linting.yaml
src/: camera_feeder.py  control_tank.py  custom_exceptions.py  face_recognizer.py  startup.sh  system_main.py
test/: test_control_tank.py
tool/: play_camera_strem.sh  print_gpio.sh
