[tool.poetry]
name = "control_tank"
version = "0.1.0"
description = ""
authors = ["kanlkan <kanlkan.naklnak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "21.12b0"
isort = "5.10.1"
flake8 = "4.0.1"
mypy = "0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
(

)
'''

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.6"
ignore_missing_imports = true
